--- a/ClientApp/src/index.html
+++ b/ClientApp/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CMS</title>
+  <title>Rasa</title>
   <base href="/">
 
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
